# Chiron

./: CLAUDE.md  README.md  devbox.json  pyproject.toml
docs/plans/: 2025-12-29-chiron-design.md  2025-12-29-chiron-implementation.md  2025-12-30-mcp-integration-continue.md  2025-12-30-research-progress-continue.md  2025-12-30-research-progress-display.md  2025-12-30-tool-execution-design.md  2025-12-30-tool-execution-impl.md  2025-12-31-lesson-output-pipeline-design.md  2025-12-31-lesson-output-pipeline-impl.md  2025-12-31-lesson-pipeline-continue.md  2026-01-01-fish-api-investigation.md  2026-01-01-fish-tts-continue.md  2026-01-01-fish-tts-design.md  2026-01-01-fish-tts-impl.md
src/chiron/: __init__.py  __main__.py  cli.py  config.py  models.py  orchestrator.py
src/chiron/agents/: __init__.py  assessment.py  base.py  curriculum.py  lesson.py  research.py
src/chiron/cli/: __init__.py
src/chiron/content/: __init__.py  audio.py  diagrams.py  parser.py  pipeline.py
src/chiron/display/: __init__.py  progress.py
src/chiron/mcp_server/: __init__.py  __main__.py  (+1 more)
tests/: __init__.py  test_audio.py  test_config.py  test_database.py  test_diagrams.py  test_mcp_server.py  test_models.py  test_orchestrator.py  test_parser.py  test_pipeline.py  test_progress.py  test_vector_store.py
tests/agents/: test_assessment_agent.py  test_base_agent.py  test_curriculum_agent.py  test_lesson_agent.py  test_research_agent.py
tests/tools/: __init__.py  test_knowledge.py  test_knowledge_nodes.py  test_learning_goals.py  test_progress_tools.py  test_registry.py  test_subjects.py
(+9 files in other folders)
